--- a/about.html
+++ b/about.html
@@ -38,11 +38,13 @@
 
   <div class="content">
     <div class="about_the_show">
-      <h2>THE GRAND PREMIERE</h2>
-      <h3>October 3-5, in American Conservatory Theater, San Francisco</h3>
-      <span style="color: #CC0033">From the creator of the award-winning "T4Tango"</span><br/>
+      <h2>Love Junkies The Musical</h2>
+      <h3>Premiering at the American Conservatory Theater A.C.T.</h3>
+      <h4>Costume Shop Theater in San Francisco</h4>
+      <span style="color: #CC0033"><h4>October 3-5th, 2014</h4></span>
+  <!--     <span style="color: #CC0033">From the creator of the award-winning "T4Tango"</span><br/> -->
 <br/>
-      <p>Love Junkies is a broadway style musical celebrating Love in many of its aspects, playful, romantic, intimate, erotic, seductive, fatherly, friendly, committed, uncommitted.</p> 
+      <p>Love Junkies is a broadway style original musical celebrating Love in many of its aspects, playful, romantic, intimate, erotic, seductive, fatherly, friendly, committed, uncommitted.</p> 
 
       <p>Love Junkies characters crave it, chase it, discover it, cope with the lack or loss of it in their own way, some are able to channel it into love for something else.</p> 
 
