--- a/cast.html
+++ b/cast.html
@@ -50,7 +50,7 @@
   <div class="bio-popup-wrapper">
   <div class="pic"><img id="pic1" class="cms-editable" src="images/Tiziana.jpg" alt="" target="_top"/></div>
   <div class="bio"><span id="name1" class="cms-editable name">TIZIANA PERINOTTI</span> <span id="role1" class="cms-editable role">(Gio) - <em>the Dreamer</em></span>
-  <p id="biotext1" class="cms-editable biotext">Italian-born Tiziana Perinotti (MissT) started her journey at A.C.T. in the summer '13 intensive music theater program. Recently she's been acting, dancing, singing, and flute playing in theaters in "Projected Voyages", and Shakespeare's "A Midsummer Night's Dream", and also played a lead role in "A Bridge To A Border" the latest movie by award-winning director Rob Nilsson now premiering at the Mill Valley Film Festival. Her T4Tango award-winning documentary is now available on Amazon. She also enjoys doing improv, voice-over, modeling, song and screen/play writing, singing, dancing, playing flute, martial arts, yoga, basketball, brain science, psychology, mindful meditation, and doing community service.</p>
+  <p id="biotext1" class="cms-editable biotext">Italian-born Tiziana Perinotti (MissT) started her journey at A.C.T. in the summer '13 intensive music theater program. Recently she's been acting, dancing, singing, and flute playing in theaters in "In The Still Of The Night" A.C.T. Production by A.C.T. Theater Director Frances E. Devlin, and Music Director Naomi Sanchez, in "Projected Voyages", and Shakespeare's "A Midsummer Night's Dream", and also played a lead role in "A Bridge To A Border" the latest movie by award-winning director Rob Nilsson now premiering at the Mill Valley Film Festival. Her T4Tango award-winning documentary is now available on Amazon. She also enjoys doing improv, voice-over, modeling, song and screen/play writing, singing, dancing, playing flute, martial arts, yoga, basketball, brain science, psychology, mindful meditation, and doing community service.</p>
   </div>
   <div style="clear: both;">&nbsp;</div>
   </div>
@@ -61,7 +61,7 @@
   <div class="bio-popup-wrapper">
   <div class="pic"><img id="pic2" class="cms-editable" src="images/omar.jpg" alt="" /></div>
   <div class="bio"><span id="name2" class="cms-editable name">COUNT GLOVER</span> <span id="role2" class="cms-editable role">(Omar) - <em>the King of Tango</em></span>
-  <p id="biotext2" class="cms-editable biotext">Returns to Broadway after playing Velma in Chicago in the West End, Adelphi Theatre ('05) Cambridge Theatre ('06-'08); Civic Theatre, Johannesburg; and Arts Theatre, Cape Town ('05, '08) (Naledi and Fleur du Cap Awards) in addition to European and UK tours, a concert production in Marbella and both 10th Anniversary productions (Broadway &amp; West End). Other theatrical credits include Vi Moore in Footloose (UK tour), Sandy in Grease at the Johannesburg Superbowl, Sheila in A Chorus Line (Civic Theatre, Jo'burg), Jack in Jack and the Beanstalk (Guild Theatre, London) and Viva Sun City (Extravaganza Theatre, Sun City). Amra-Faye has written and performed many one-woman shows, including It's Not Where I Start, Drinks on Me and Rouge Pulp, and starred in numerous musical extravaganzas worldwide. Her many commercial credits include soloist for SPAR International (Sun City Superbowl) and for the South African VIP Gala at the Sydney Olympics, and guest artist for World-Cup Rugby Gala.</p>
+  <p id="biotext2" class="cms-editable biotext">Count Glover , Co-Founder, of Studio 1924 in downtown Oakland, CA, is a professional dancer, teacher and choreographer of Argentine Tango. He has studied with some of the world's most renowned tango maestros. He is a well rounded, versatile dancer and performer, with a Tap and Ballet background that began at the age of two with his grandmother dance company in Chicago. Count is also a well received social dancer of tango and is adept at all forms of tango from all time periods and considered one of the best dancers of Argentine Tango in San Francisco.</p><p>Count has performed in the Bay Area and around the U.S. and Argentina in many stage performances, he was a featured artist at the restaurant Destinos in San Francisco and also a principal dancer for the MonTango Orchestra base in the Bay area since 2000. Count is currently the featured dancer in the ensemble Tango del Cielo. Count has also been featured on the KRON Channel 4 program “Latin Eyes” and various documentaries about tango.</p><p>He has performed in San Francisco, Los Angeles, Washington, Michigan, Chicago, New York, and Miami. In 2000, he won first place in the west coast Tango competition organized by the Argentine government and in 2002 was a finalist in the world Tango competition held in Miami.</p>
   </div>
   <div style="clear: both;">&nbsp;</div>
   </div>
@@ -98,6 +98,19 @@
   <div class="pic"><img id="pic3" class="cms-editable" src="images/danilo.jpg" alt="" /></div>
   <div class="bio"><span id="name3" class="cms-editable name">HEREN PATEL</span> <span id="role3" class="cms-editable role">(Danilo) - <em>Mama's Boy</em></span>
   <p id="biotext3" class="cms-editable biotext">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum </p>
+  </div>
+  <div style="clear: both;">&nbsp;</div>
+  </div>
+  </div>
+  </div>
+
+
+    <div class="cms-repeat" id="bio-popup-outer3">
+  <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
+  <div class="bio-popup-wrapper">
+  <div class="pic"><img id="pic3" class="cms-editable" src="images/sam.jpeg" alt="" /></div>
+  <div class="bio"><span id="name3" class="cms-editable name">SAMUEL BO</span> <span id="role3" class="cms-editable role">(RJ) - <em>the "Perfect Son"</em></span>
+  <p id="biotext3" class="cms-editable biotext">A local bay area resident, Samuel Bo is an aspiring actor currently taking classes at the American Conservatory Theater.  Being both an actor and a singer he is very versatile and is a great addition to any cast. Despite this being his first real stage production Sam displays a professionalism, creativity, and work ethic that goes beyond his experience.</p>
   </div>
   <div style="clear: both;">&nbsp;</div>
   </div>
