--- a/creative.html
+++ b/creative.html
@@ -42,7 +42,7 @@
 
 <!--START: Content Area-->
 <section class="contentArea cast">
-  <h1>Show Cast</h1>
+  <h1>Creative Team</h1>
         
         
   <div class="cms-repeat cms-editable" id="bio-popup-outer1">
