--- a/about.html
+++ b/about.html
@@ -53,6 +53,15 @@
       <p>The Love as Life Force wants to live and move forwards even in Love Junkies.</p>
     </div>
 
+    <div class="credits">
+      <strong style="font-size: 16px">Credits:</strong> <br/>
+        <b>Photos by:</b> <span class="creditable">Howard Ho, Tiziana Perinotti</span><br>
+        <b>Script by:</b> <span class="creditable">Tiziana Perinotti</span><br>
+        <b>Website development & design:</b> <span class="creditable">Sonya Nagaslaeva</span><br>
+        <b>Posters by:</b> <span class="creditable"><a href="http://pierregranier.com" target="_blank">Pierre Garnier</a></span><br>
+
+    </div>
+
 
   </div> <!-- content -->
 
