--- a/index.html
+++ b/index.html
@@ -48,9 +48,17 @@
     </div>
 
     <div class = "main_page_content">
-      <p>Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+   <!--    <p>Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p> -->
       <img src="images/poster.jpg"/  alt="Love Junkies Cast" title="Love Junkies Cast">
+      <div class="poster_credit">Poster by: Tiziana Perinotti</div>
     </div>
+
+    <span style="font-size: 12px">
+    LOVE JUNKIES BY TIZIANA PERINOTTI - COPYRIGHT 2013 <br/>
+    WGA Registration Number: 1704944
+    </span>
+
+
 
   </div> <!-- content -->
 
