--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         <b>Photos by:</b> <span class="creditable">Howard Ho, Tiziana Perinotti</span><br>
         <b>Script by:</b> <span class="creditable">Tiziana Perinotti</span><br>
         <b>Website development & design:</b> <span class="creditable">Sonya Nagaslaeva</span><br>
-        <b>Posters by:</b> <span class="creditable"><a href="http://pierregranier.com" target="_blank">Pierre Garnier</a></span><br>
+        <b>Posters by:</b> <span class="creditable"><a href="http://pierregranier.com" target="_blank">Pierre Granier</a></span><br>
 
     </div>
 
