--- a/cast.html
+++ b/cast.html
@@ -141,6 +141,7 @@
   <div class="pic"><img id="pic4" class="cms-editable" src="images/Sonya.jpg" alt="" /></div>
   <div class="bio"><span id="name4" class="cms-editable name">SONYA NAGASLAEVA</span> <span id="role4" class="cms-editable role">(Bellissima) - <em>Principal Dancer</em></span>
   <p id="biotext4" class="cms-editable biotext">Originally from Russia, Sonya Nagaslaeva began dance lessons in early childhood. She chafed under traditional ballet style and explored other types of self-expression in art, such as contemporary dance, ballroom and contact improvisation. In 2002 she joined the Musical Theater of V.D. Stefaniev where she performed as a dancer and actress and got her first experience as a choreographer. In 2007, she moved to the US and in 2008 she was introduced to Argentine Tango. Tango became her biggest passion in life. Sonya trained in Chicago and eventually went to live in Buenos Aires to learn from the greatest maestros of the world.</p>
+  <em>Photo by: Gary Draluck</em>
   </div>
   <div style="clear: both;">&nbsp;</div>
   </div>
