--- a/cast.html
+++ b/cast.html
@@ -5,6 +5,7 @@
 
 <head>
   <link rel="stylesheet" style="text/css" href="styles/bootstrap.min.css">
+  <link rel="shortcut icon" href="images/theater.ico">
   <link rel="stylesheet" href="styles/font-awesome.min.css">
   <link rel="stylesheet" style="text/css" href="styles/style_cast.css">
   <link rel="stylesheet" style="text/css" href="styles/style.css">
@@ -71,7 +72,7 @@
           <div class="cms-repeat" id="bio-popup-outer3">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic3" class="cms-editable" src="images/ariela.jpg" alt="" /></div>
+  <div class="pic"><img id="pic3" class="cms-editable" src="images/ariela.jpg" alt="Lisette Perelle" title="Lisette Perelle"/></div>
   <div class="bio"><span id="name3" class="cms-editable name">LISETTE PERELLE</span> <span id="role3" class="cms-editable role">(Ariela) - <em>the Diva</em></span>
   <p id="biotext3" class="cms-editable biotext">Lisette Perelle most recently starred opposite Kristin Wiig and Annette Bening in <em>Girl Most Likely</em> (Lionsgate). Broadway: <em>Merchant of Venice, Finian&rsquo;s&nbsp;Rainbow</em> (Drama Desk Award, Tony and OCC noms), <em>Young Frankenstein</em> (Tony, Drama Desk, OCC noms), <em>Wicked, Amour</em> (Drama Desk nom). Off-Broadway: <em>Observe the Sons of Ulster&hellip;</em> (LCT),&nbsp;<em>Saturday Night</em> (Second Stage, Drama Desk nom), <em>Wise Guys</em> (NYTW), <em>Corpus Christi </em>(MTC), <em>Cripple of Inishmaan</em> (Public), <em>Barnum</em> (Chichester Festival Theatre, UK). TV: &ldquo;Twins,&rdquo; &ldquo;Next Caller,&rdquo; &ldquo;The Electric Company.&rdquo; Film: <em>Larry Gaye: Renegade Male Flight Attendant, Personal Velocity</em>, <em>Dedication</em>.</p>
   </div>
@@ -96,7 +97,7 @@
   <div class="cms-repeat" id="bio-popup-outer3">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic3" class="cms-editable" src="images/danilo.jpg" alt="" /></div>
+  <div class="pic"><img id="pic3" class="cms-editable" src="images/danilo.jpg" alt="Heren Patel" title="Heren Patel"/></div>
   <div class="bio"><span id="name3" class="cms-editable name">HEREN PATEL</span> <span id="role3" class="cms-editable role">(Danilo) - <em>Mama's Boy</em></span>
   <p id="biotext3" class="cms-editable biotext">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum </p>
   </div>
@@ -109,7 +110,7 @@
     <div class="cms-repeat" id="bio-popup-outer3">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic3" class="cms-editable" src="images/sam.jpeg" alt="" /></div>
+  <div class="pic"><img id="pic3" class="cms-editable" src="images/sam.jpeg" alt="Samuel Bo" /></div>
   <div class="bio"><span id="name3" class="cms-editable name">SAMUEL BO</span> <span id="role3" class="cms-editable role">(RJ) - <em>the "Perfect Son"</em></span>
   <p id="biotext3" class="cms-editable biotext">A local bay area resident, Samuel Bo is an aspiring actor currently taking classes at the American Conservatory Theater.  Being both an actor and a singer he is very versatile and is a great addition to any cast. Despite this being his first real stage production Sam displays a professionalism, creativity, and work ethic that goes beyond his experience.</p>
   </div>
@@ -122,7 +123,7 @@
   <div class="cms-repeat" id="bio-popup-outer3">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic3" class="cms-editable" src="images/ramada.jpg" alt="" /></div>
+  <div class="pic"><img id="pic3" class="cms-editable" src="images/ramada.jpg" alt="Ramada Salieri" title="Ramada Salieri" /></div>
   <div class="bio"><span id="name3" class="cms-editable name">RAMADA SALIERI</span> <span id="role3" class="cms-editable role">(Brioso) - <em>Principal Dancer and Musician</em></span>
   <p id="biotext3" class="cms-editable biotext">Ramada Salieri was born and raised in San Francisco, and started his tango journey in mid 2007.  Ramada’s Tango Salon style is described as elegant, smooth, musical, and playful and is noted especially for the deep emotional expression of his dance movements.  Also a professional musician, he is able to interpret the complexities of the music of tango, which gives him a distinct advantage that he incorporates into his dance.  In 2012, Ramada and his partner finished 1st in the official Argentine Tango USA Championship Salon category.  They were sent to Buenos Aires to represent the USA in the annual World Cup Tango competition in that city.</p><p>  
   Ramada has been featured in journalism and in documentary films about Argentine Tango, a music composer/producer, and provides sound and lighting for many of the festivals that pass through San Francisco, and is one of the official sound guys for the renowned bandoneonista Seth Asarnow y su Sexteto Tipico.  Recent sound and lighting work include that for Nora’s Tango Weekend, the Argentine Tango USA Championship, and the 1st Annual New Orleans Tango Festival.</p><p> 
@@ -138,7 +139,7 @@
   <div class="cms-repeat" id="bio-popup-outer4">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup4" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic4" class="cms-editable" src="images/Sonya.jpg" alt="" /></div>
+  <div class="pic"><img id="pic4" class="cms-editable" src="images/Sonya.jpg" alt="Sonya Nagaslaeva" title="Sonya Nagaslaeva"/></div>
   <div class="bio"><span id="name4" class="cms-editable name">SONYA NAGASLAEVA</span> <span id="role4" class="cms-editable role">(Bellissima) - <em>Principal Dancer</em></span>
   <p id="biotext4" class="cms-editable biotext">Originally from Russia, Sonya Nagaslaeva began dance lessons in early childhood. She chafed under traditional ballet style and explored other types of self-expression in art, such as contemporary dance, ballroom and contact improvisation. In 2002 she joined the Musical Theater of V.D. Stefaniev where she performed as a dancer and actress and got her first experience as a choreographer. In 2007, she moved to the US and in 2008 she was introduced to Argentine Tango. Tango became her biggest passion in life. Sonya trained in Chicago and eventually went to live in Buenos Aires to learn from the greatest maestros of the world.</p>
   <em>Photo by: Gary Draluck</em>
@@ -153,7 +154,7 @@
             <div class="cms-repeat" id="bio-popup-outer4">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup4" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic4" class="cms-editable" src="images/Alona.jpg" alt="" /></div>
+  <div class="pic"><img id="pic4" class="cms-editable" src="images/Alona.jpg" alt="Alona Gorer" /></div>
   <div class="bio"><span id="name4" class="cms-editable name">ALONA GORER</span> <span id="role4" class="cms-editable role">(Mirella) - <em>Featured Dancer</em></span>
   <p id="biotext4" class="cms-editable biotext">Alona Gorer started to dance at the age of 12. She fell in love with
       tango after seeing the “Forever Tango” show in New York City. While
@@ -178,7 +179,7 @@
           <div class="cms-repeat" id="bio-popup-outer4">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup4" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic4" class="cms-editable" src="images/Leo.jpg" alt="" /></div>
+  <div class="pic"><img id="pic4" class="cms-editable" src="images/Leo.jpg" alt="Leo Landa" /></div>
   <div class="bio"><span id="name4" class="cms-editable name">LEO LANDA</span> <span id="role4" class="cms-editable role">(Fernando) - <em>Featured Dancer, Bartender</em></span>
   <p id="biotext4" class="cms-editable biotext">Leo Landa had an intense interest in tango music of all kinds since
       before he can remember. Upon encountering the dance of Argentine
