--- a/contacts.html
+++ b/contacts.html
@@ -9,6 +9,7 @@ if($_POST["message"]) {
 <html>
 <head>
   <link rel="stylesheet" style="text/css" href="styles/bootstrap.min.css">
+  <link rel="shortcut icon" href="images/theater.ico">
   <link rel="stylesheet" href="styles/font-awesome.min.css">
   <link rel="stylesheet" style="text/css" href="styles/style_about.css">
   <link rel="stylesheet" style="text/css" href="styles/style.css">
