--- a/creative.html
+++ b/creative.html
@@ -5,6 +5,7 @@
 
 <head>
   <link rel="stylesheet" style="text/css" href="styles/bootstrap.min.css">
+  <link rel="shortcut icon" href="images/theater.ico">
   <link rel="stylesheet" href="styles/font-awesome.min.css">
   <link rel="stylesheet" style="text/css" href="styles/style_cast.css">
   <link rel="stylesheet" style="text/css" href="styles/style.css">
