--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" style="text/css" href="styles/bootstrap.min.css">
+  <link rel="shortcut icon" href="images/theater.ico">
   <link rel="stylesheet" href="styles/font-awesome.min.css">
   <link rel="stylesheet" style="text/css" href="styles/style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>  
