--- a/photos_videos.html
+++ b/photos_videos.html
@@ -3,6 +3,7 @@
 <head>
     <title>Love Junkies - the Musical</title>
   <link rel="stylesheet" href="styles/font-awesome.min.css">
+  <link rel="shortcut icon" href="images/theater.ico">
   <link rel="stylesheet" style="text/css" href="styles/style.css">
   <link rel="stylesheet" style="text/css" href="styles/style_photos.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>  
