--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </ul>
       </li>
       <li><a href="contacts.html">Contact Us</a></li>
-      <li><img src="images/fb-image.jpg" height="30" title="Our Facebook Page"></li>
+      <li><a href="https://www.facebook.com/LoveJunkiesTheMusical" target="_blank"><img src="images/fb-image.jpg" height="30" title="Our Facebook Page"></a></li>
     </div>
     </ul>  
   </div>
