--- a/photos_videos.html
+++ b/photos_videos.html
@@ -41,7 +41,7 @@
               </ul>
           </li>
           <li><a href="contacts.html">Contact Us</a></li>
-          <li><img src="images/fb-image.jpg" height="30" title="Our Facebook Page"></li>
+          <li><a href="https://www.facebook.com/LoveJunkiesTheMusical" target="_blank"><img src="images/fb-image.jpg" height="30" title="Our Facebook Page"></a></li>
         </div>
         </ul>  
     </div>
@@ -62,12 +62,16 @@
                         <area href="#img1map-area2" shape="rect" coords="300,100,400,200" />
                     </map>
                     <div class="SliderName_2Description">Actors: <strong>TJ, RJ</strong></div>
+
                     <img src="images/group_photo.jpg" width="700" height="450" alt="Demo2 second" title="Demo2 second" />
                     <div class="SliderName_2Description">Show Cast: <strong>Love Junkies</strong></div>
+
                     <img src="images/Ramada&Sonya.jpg" width="700" height="450" alt="Demo2 third" title="Demo2 third" />
                     <div class="SliderName_2Description">Some Dancers: <strong>Us</strong></div>
-                    <img src="images/Tiziana.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
-                    <div class="SliderName_2Description">Featured model: <strong>Tiziana Perinotti</strong></div>
+
+             <!--        <img src="images/leo_alona.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
+                    <div class="SliderName_2Description">Dancers: <strong>Fernando & Mirella</strong></div> -->
+
                     <img src="images/tj_rj_gio.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
                     <div class="SliderName_2Description">Actors: <strong>TJ, Gio, RJ</strong></div>
                 </div>
