--- a/cast.html
+++ b/cast.html
@@ -72,9 +72,19 @@
           <div class="cms-repeat" id="bio-popup-outer3">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic3" class="cms-editable" src="images/ariela.jpg" alt="Lisette Perelle" title="Lisette Perelle"/></div>
+  <div class="pic"><img id="pic3" class="cms-editable" src="images/lisette.jpg" alt="Lisette Perelle" title="Lisette Perelle"/></div>
   <div class="bio"><span id="name3" class="cms-editable name">LISETTE PERELLE</span> <span id="role3" class="cms-editable role">(Ariela) - <em>the Diva</em></span>
-  <p id="biotext3" class="cms-editable biotext">Lisette Perelle most recently starred opposite Kristin Wiig and Annette Bening in <em>Girl Most Likely</em> (Lionsgate). Broadway: <em>Merchant of Venice, Finian&rsquo;s&nbsp;Rainbow</em> (Drama Desk Award, Tony and OCC noms), <em>Young Frankenstein</em> (Tony, Drama Desk, OCC noms), <em>Wicked, Amour</em> (Drama Desk nom). Off-Broadway: <em>Observe the Sons of Ulster&hellip;</em> (LCT),&nbsp;<em>Saturday Night</em> (Second Stage, Drama Desk nom), <em>Wise Guys</em> (NYTW), <em>Corpus Christi </em>(MTC), <em>Cripple of Inishmaan</em> (Public), <em>Barnum</em> (Chichester Festival Theatre, UK). TV: &ldquo;Twins,&rdquo; &ldquo;Next Caller,&rdquo; &ldquo;The Electric Company.&rdquo; Film: <em>Larry Gaye: Renegade Male Flight Attendant, Personal Velocity</em>, <em>Dedication</em>.</p>
+  <p id="biotext3" class="cms-editable biotext">Dancing since the age of 5, Lisette began her training in gymnastics and continued her education in Hula, Ballet, Jazz, Modern, Ballroom, Theater and finally Argentine Tango where she feels that she found her home.</p><p>
+She received her B.A. degree in Speech Communications with a concentration in film and television production with her minor in Theater from Northeastern University in Boston.</p><p>
+Lisette has worked in the Film industry since 1991 and was a Lotus Award Winning Producer for Best PSA while she lived in Canada. 
+Her love of theater began as a child and she has had many leading roles in such shows as "Nude with Violin", "Curse of the Starving Class", "Working" and "Tango Fatal".</p><p>
+She has danced in and done choreography for Northeastern Dance Theater, Ballet Pampa Argentina, Three Short films, music videos, and television performances for KQED, San Francisco and Univision.</p><p>
+Lisette has performed with some of the most well known dancers in Argentine Tango today, Jorge Torres, Roberto Reis, Claudio Espera, Humberto Decima, Facundo Posadas, Eduardo Saucedo &,Pampa Cortes to name a few.  </p><p>
+She has trained U.S.A. Argentine Tango Champions and was a finalist herself in 2014.</p><p>
+ Lisette teaches and performs all around the Bay Area and the United States as well as in Buenos Aires, Argentina.</p><p>
+An elegant dancer and patient teacher, her focus is on the techniques necessary for smooth, powerful and beautiful dancing.</p><p>
+Presently She is Directing and shooting her own documentary on Tango.</p>
+<a href="http://lisetteperelle.com">WWW.LISETTEPERELLE.COM</a>
   </div>
   <div style="clear: both;">&nbsp;</div>
   </div>
