--- a/cast.html
+++ b/cast.html
@@ -91,7 +91,7 @@ Presently She is Directing and shooting her own documentary on Tango.</p>
   </div>
   </div>
 
-            <div class="cms-repeat" id="bio-popup-outer3">
+<!--             <div class="cms-repeat" id="bio-popup-outer3">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
   <div class="pic"><img id="pic3" class="cms-editable" src="images/robert.jpg" alt="" /></div>
@@ -101,7 +101,7 @@ Presently She is Directing and shooting her own documentary on Tango.</p>
   <div style="clear: both;">&nbsp;</div>
   </div>
   </div>
-  </div>
+  </div> -->
 
 
   <div class="cms-repeat" id="bio-popup-outer3">
