--- a/contacts.html
+++ b/contacts.html
@@ -46,15 +46,30 @@ if($_POST["message"]) {
 
   <div class="content">
     <div class="email_form">
-      <form method="post" action="contact.php">
-          <textarea name="message"></textarea>
-          <input type="submit">
+      <form action="contact.php" method="post"> 
+        <table width="400" border="0" cellspacing="2" cellpadding="0"> 
+        <tr> 
+        <td width="29%" class="bodytext">Your name:</td> 
+        <td width="71%"><input name="name" type="text" id="name" size="32"></td> 
+        </tr> 
+        <tr> 
+        <td class="bodytext">Email address:</td> 
+        <td><input name="email" type="text" id="email" size="32"></td> 
+        </tr> 
+        <tr> 
+        <td class="bodytext">Comment:</td> 
+        <td><textarea name="comment" cols="45" rows="6" id="comment" class="bodytext"></textarea></td> 
+        </tr> 
+        <tr> 
+        <td class="bodytext"> </td> 
+        <td align="left" valign="top"><input type="submit" name="Submit" value="Send"></td> 
+        </tr> 
+        </table> 
       </form>
     </div>
 
 
   </div> <!-- content -->
-
 
 
 </body>
