--- a/contacts.html
+++ b/contacts.html
@@ -45,27 +45,9 @@ if($_POST["message"]) {
   </div>
 
   <div class="content">
-    <div class="email_form">
-      <form action="contact.php" method="post"> 
-        <table width="400" border="0" cellspacing="2" cellpadding="0"> 
-        <tr> 
-        <td width="29%" class="bodytext">Your name:</td> 
-        <td width="71%"><input name="name" type="text" id="name" size="32"></td> 
-        </tr> 
-        <tr> 
-        <td class="bodytext">Email address:</td> 
-        <td><input name="email" type="text" id="email" size="32"></td> 
-        </tr> 
-        <tr> 
-        <td class="bodytext">Comment:</td> 
-        <td><textarea name="comment" cols="45" rows="6" id="comment" class="bodytext"></textarea></td> 
-        </tr> 
-        <tr> 
-        <td class="bodytext"> </td> 
-        <td align="left" valign="top"><input type="submit" name="Submit" value="Send"></td> 
-        </tr> 
-        </table> 
-      </form>
+    <div class="contact_t">
+      For all questions about the show contact Tiziana Perinotti: <span style="color: #B22222">tgp_2001@hotmail.com</span><br/>
+      Website administrator: <span style="color: #B22222">sofyanagaslaeva@gmail.com</span>
     </div>
 
 
