--- a/photos_videos.html
+++ b/photos_videos.html
@@ -67,13 +67,19 @@
                     <div class="SliderName_2Description">Show Cast: <strong>Love Junkies</strong></div>
 
                     <img src="images/Ramada&Sonya.jpg" width="700" height="450" alt="Demo2 third" title="Demo2 third" />
-                    <div class="SliderName_2Description">Some Dancers: <strong>Us</strong></div>
+                    <div class="SliderName_2Description">Principal Dancers: <strong>Brioso, Bellissima</strong></div>
 
-             <!--        <img src="images/leo_alona.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
-                    <div class="SliderName_2Description">Dancers: <strong>Fernando & Mirella</strong></div> -->
+                    <img src="images/leo_alona_black.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
+                    <div class="SliderName_2Description">Dancers: <strong>Fernando & Mirella</strong></div>
+
+                    <img src="images/omar_ariela_black.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
+                    <div class="SliderName_2Description">Actors: <strong>Omar & Ariela</strong></div>
 
                     <img src="images/tj_rj_gio.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
                     <div class="SliderName_2Description">Actors: <strong>TJ, Gio, RJ</strong></div>
+
+                    <img src="images/omar_ariela_2_black.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
+                    <div class="SliderName_2Description">Actors: <strong>Omar & Ariela</strong></div>
                 </div>
                 <div class="c"></div>
                 <div id="SliderNameNavigation_2"></div>
