--- a/photos_videos.html
+++ b/photos_videos.html
@@ -80,6 +80,9 @@
 
                     <img src="images/omar_ariela_2_black.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
                     <div class="SliderName_2Description">Actors: <strong>Omar & Ariela</strong></div>
+
+                    <img src="images/leo_alona_2_black.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
+                    <div class="SliderName_2Description">Dancers: <strong>Fernando & Mirella</strong></div>
                 </div>
                 <div class="c"></div>
                 <div id="SliderNameNavigation_2"></div>
