--- a/photos_videos.html
+++ b/photos_videos.html
@@ -70,7 +70,7 @@
                     <div class="SliderName_2Description">Principal Dancers: <strong>Brioso, Bellissima</strong></div>
 
                     <img src="images/leo_alona_black.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
-                    <div class="SliderName_2Description">Dancers: <strong>Fernando & Mirella</strong></div>
+                    <div class="SliderName_2Description">Featured Dancers: <strong>Fernando & Mirella</strong></div>
 
                     <img src="images/omar_ariela_black.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
                     <div class="SliderName_2Description">Actors: <strong>Omar & Ariela</strong></div>
@@ -82,7 +82,11 @@
                     <div class="SliderName_2Description">Actors: <strong>Omar & Ariela</strong></div>
 
                     <img src="images/leo_alona_2_black.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
-                    <div class="SliderName_2Description">Dancers: <strong>Fernando & Mirella</strong></div>
+                    <div class="SliderName_2Description">Featured Dancers: <strong>Fernando & Mirella</strong></div>
+
+                    <img src="images/brio_bellissima.jpg" width="700" height="450" alt="Demo2 third" title="Demo2 third" />
+                    <div class="SliderName_2Description">Principal Dancers: <strong>Brioso, Bellissima</strong></div>
+
                 </div>
                 <div class="c"></div>
                 <div id="SliderNameNavigation_2"></div>
