added jeremy bio

--- a/cast.html
+++ b/cast.html
@@ -84,7 +84,7 @@ She has trained U.S.A. Argentine Tango Champions and was a finalist herself in 2
  Lisette teaches and performs all around the Bay Area and the United States as well as in Buenos Aires, Argentina.</p><p>
 An elegant dancer and patient teacher, her focus is on the techniques necessary for smooth, powerful and beautiful dancing.</p><p>
 Presently She is Directing and shooting her own documentary on Tango.</p>
-<a href="http://lisetteperelle.com">WWW.LISETTEPERELLE.COM</a>
+<a href="http://lisetteperelle.com" target="_blank">WWW.LISETTEPERELLE.COM</a>
   </div>
   <div style="clear: both;">&nbsp;</div>
   </div>
@@ -116,6 +116,27 @@ Presently She is Directing and shooting her own documentary on Tango.</p>
   </div>
   </div>
 
+
+   <!-- <div class="cms-repeat" id="bio-popup-outer3">
+  <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
+  <div class="bio-popup-wrapper">
+  <div class="pic"><img id="pic3" class="cms-editable" src="" alt="Samuel Bo" /></div>
+  <div class="bio"><span id="name3" class="cms-editable name">KIRK BENTTINEN</span> <span id="role3" class="cms-editable role">(TJ) - <em>the Buffon</em></span>
+  <p id="biotext3" class="cms-editable biotext">Kirk Benttinen is an Oakland based artist and musician. He studied drum performance and musical composition at the University of Rhode Island and later at Manhattan’s Collective School of Music.</p><p> 
+
+  He now explores many creative pursuits including writing, video, installation art, audio installations, performance art, drumming, record producing, songwriting, stand-up comedy and acting. He is also a music educator.</p><p>
+
+  Some of his major recent accomplishments have been large trans-media art projects he calls Phenomena. Phenomena use a number of mediums to engage participants in surprise artistic experiences that aim to provide lasting inspiration.</p><p> 
+
+  Love Junkies is his acting debut.</p><p>
+
+  You can learn more about what he does at <a href="http://www.kirkbenttinen.com" target="_blank">www.kirkbenttinen.com</a> or <a href="http://www.theholyscoundrel.tumblr.com" target="_blank">www.theholyscoundrel.tumblr.com</a></p>
+  </div>
+  <div style="clear: both;">&nbsp;</div>
+  </div>
+  </div>
+  </div>
+ -->
 
     <div class="cms-repeat" id="bio-popup-outer3">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
