--- a/cast.html
+++ b/cast.html
@@ -117,10 +117,10 @@ Presently She is Directing and shooting her own documentary on Tango.</p>
   </div>
 
 
-   <!-- <div class="cms-repeat" id="bio-popup-outer3">
+   <div class="cms-repeat" id="bio-popup-outer3">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic3" class="cms-editable" src="" alt="Samuel Bo" /></div>
+  <div class="pic"><img id="pic3" class="cms-editable" src="images/kirk.jpg" alt="Kirk Benttinen" /></div>
   <div class="bio"><span id="name3" class="cms-editable name">KIRK BENTTINEN</span> <span id="role3" class="cms-editable role">(TJ) - <em>the Buffon</em></span>
   <p id="biotext3" class="cms-editable biotext">Kirk Benttinen is an Oakland based artist and musician. He studied drum performance and musical composition at the University of Rhode Island and later at Manhattan’s Collective School of Music.</p><p> 
 
@@ -130,13 +130,13 @@ Presently She is Directing and shooting her own documentary on Tango.</p>
 
   Love Junkies is his acting debut.</p><p>
 
-  You can learn more about what he does at <a href="http://www.kirkbenttinen.com" target="_blank">www.kirkbenttinen.com</a> or <a href="http://www.theholyscoundrel.tumblr.com" target="_blank">www.theholyscoundrel.tumblr.com</a></p>
+  You can learn more about what he does at <a href="http://www.kirkbenttinen.com" target="_blank">www.kirkbenttinen.com</a> or <a href="http://www.theholyscoundrel.tumblr.com" target="_blank">www.theholyscoundrel.tumblr.com</a>.</p>
   </div>
   <div style="clear: both;">&nbsp;</div>
   </div>
   </div>
   </div>
- -->
+
 
     <div class="cms-repeat" id="bio-popup-outer3">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
@@ -172,7 +172,7 @@ Presently She is Directing and shooting her own documentary on Tango.</p>
   <div class="bio-popup-wrapper">
   <div class="pic"><img id="pic4" class="cms-editable" src="images/Sonya.jpg" alt="Sonya Nagaslaeva" title="Sonya Nagaslaeva"/></div>
   <div class="bio"><span id="name4" class="cms-editable name">SONYA NAGASLAEVA</span> <span id="role4" class="cms-editable role">(Bellissima) - <em>Principal Dancer</em></span>
-  <p id="biotext4" class="cms-editable biotext">Originally from Russia, Sonya Nagaslaeva began dance lessons in early childhood. She chafed under traditional ballet style and explored other types of self-expression in art, such as contemporary dance, ballroom and contact improvisation. In 2002 she joined the Musical Theater of V.D. Stefaniev where she performed as a dancer and actress and got her first experience as a choreographer. In 2007, she moved to the US and in 2008 she was introduced to Argentine Tango. Tango became her biggest passion in life. Sonya trained in Chicago and eventually went to live in Buenos Aires to learn from the greatest maestros of the world.</p>
+  <p id="biotext4" class="cms-editable biotext">Originally from Russia, Sonya (Sofya) Nagaslaeva began dance lessons in early childhood. She chafed under traditional ballet style and explored other types of self-expression in art, such as contemporary dance, pop, ballroom and contact improvisation. In 2002 she joined the Musical Theater of V.D. Stefaniev where she performed as a dancer and actress, played several leading roles and got her first experience as a choreographer. In 2007, she moved to the US and in 2008 she was introduced to Argentine Tango. Tango became her biggest passion in life. Sonya trained in Chicago and eventually went to live in Buenos Aires to learn from the greatest maestros of the world.</p>
   <em>Photo by: Gary Draluck</em>
   </div>
   <div style="clear: both;">&nbsp;</div>
